--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ virtualenvwrapper-win==1.2.1
 South==1.0
 
 dj-database-url==0.4.0
-
+dj_static=0.0.6
 gunicorn==19.4.5
 psycopg2==2.6.1
 whitenoise==2.0.6
