--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,8 @@ requests==2.10.0
 virtualenv==15.0.3
 virtualenvwrapper-win==1.2.1
 South==1.0
-
 dj-database-url==0.4.0
-dj_static=0.0.6
+dj_static==0.0.6
 gunicorn==19.4.5
 psycopg2==2.6.1
 whitenoise==2.0.6
