--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ virtualenvwrapper-win==1.2.1
 South==1.0
 dj-database-url==0.4.0
 dj_static==0.0.6
-gunicorn==19.4.5
+gunicorn==19.6.0
 psycopg2==2.6.1
 whitenoise==2.0.6
 python-social-auth==0.2.21
 jsonfield==1.0.3
+times==0.7
+portalocker==1.0.0
